--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^20.8.9",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
+    "axios": "^1.6.7",
     "datocms-plugin-sdk": "^1.0.0",
     "datocms-react-ui": "^1.0.0",
     "datocms-structured-text-slate-utils": "^2.1.2",
@@ -32,6 +33,8 @@
     "html2json": "^1.0.2",
     "mdast-util-from-markdown": "^2.0.0",
     "mdast-util-to-markdown": "^2.1.0",
+    "moment": "^2.30.1",
+    "openai": "^4.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "slugify": "^1.6.6",
